--- a/.github/workflows/sycl_precommit.yml
+++ b/.github/workflows/sycl_precommit.yml
@@ -36,6 +36,7 @@ jobs:
     needs: lint
     uses: intel/llvm/.github/workflows/sycl_linux_build_and_test.yml@sycl
     with:
+      build_runs_on: "sycl-precommit-linux"
       build_cache_root: "/__w/"
       build_cache_size: "8G"
       build_artifact_suffix: "default"
