--- a/.github/workflows/sycl_precommit.yml
+++ b/.github/workflows/sycl_precommit.yml
@@ -1,4 +1,4 @@
-name: SYCL pre-commit checks
+name: SYCL pre-commit
 
 on:
   pull_request:
@@ -18,15 +18,18 @@ jobs:
         fetch-depth: 2
 
     - name: Run clang-format for the patch
+      if: ${{ !(contains( github.event.pull_request.labels.*.name, 'pulldown') || contains( github.event.pull_request.labels.*.name, 'nolint')) }}
       run: |
         git diff --no-color ${GITHUB_SHA}^1 ${GITHUB_SHA} --name-only -- | grep -v "/test/" | xargs git diff -U0 --no-color ${GITHUB_SHA}^1 ${GITHUB_SHA} -- | ./clang/tools/clang-format/clang-format-diff.py -p1 -binary clang-format > ./clang-format.patch
     # Add patch with formatting fixes to CI job artifacts
     - uses: actions/upload-artifact@v1
+      if: ${{ !(contains( github.event.pull_request.labels.*.name, 'pulldown') || contains( github.event.pull_request.labels.*.name, 'nolint')) }}
       with:
         name: clang-format-patch
         path: ./clang-format.patch
 
     - name: Check if clang-format patch is empty
+      if: ${{ !(contains( github.event.pull_request.labels.*.name, 'pulldown') || contains( github.event.pull_request.labels.*.name, 'nolint')) }}
       run: bash -c "if [ -s ./clang-format.patch ]; then cat ./clang-format.patch; exit 1; fi"
 
   linux_default:
