--- a/sycl/source/CMakeLists.txt
+++ b/sycl/source/CMakeLists.txt
@@ -24,7 +24,7 @@ function(add_sycl_rt_library LIB_NAME)
     COMPILE_OPTIONS ${ARG_COMPILE_OPTIONS}
     COMPILE_DEFINITIONS
       __SYCL_INTERNAL_API
-      __SYCL_BUILD_SYCL_DLL
+      $<$<PLATFORM_ID:Windows>:__SYCL_BUILD_SYCL_DLL>
       SYCL2020_DISABLE_DEPRECATION_WARNINGS
     INCLUDES
       ${CMAKE_CURRENT_SOURCE_DIR}
