--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -715,7 +715,7 @@ else()
 endif()
 option(LLVM_ENABLE_PLUGINS "Enable plugin support" ${LLVM_ENABLE_PLUGINS_default})
 
-set(LLVM_ENABLE_NEW_PASS_MANAGER FALSE CACHE BOOL
+set(LLVM_ENABLE_NEW_PASS_MANAGER TRUE CACHE BOOL
   "Enable the new pass manager by default.")
 if(NOT LLVM_ENABLE_NEW_PASS_MANAGER)
   message(WARNING "Using the legacy pass manager for the optimization pipeline"
