--- a/devops/actions/clang-format/action.yml
+++ b/devops/actions/clang-format/action.yml
@@ -4,6 +4,7 @@ runs:
   using: "composite"
   steps:
   - name: Run clang-format for the patch
+    shell: bash
     run: |
       git diff --no-color ${GITHUB_SHA}^1 ${GITHUB_SHA} --name-only -- | grep -v "/test/" | xargs git diff -U0 --no-color ${GITHUB_SHA}^1 ${GITHUB_SHA} -- | ./clang/tools/clang-format/clang-format-diff.py -p1 -binary clang-format > ./clang-format.patch
   # Add patch with formatting fixes to CI job artifacts
@@ -11,6 +12,6 @@ runs:
     with:
       name: clang-format-patch
       path: ./clang-format.patch
-
   - name: Check if clang-format patch is empty
+    shell: bash
     run: bash -c "if [ -s ./clang-format.patch ]; then cat ./clang-format.patch; exit 1; fi"
