--- a/.github/workflows/sycl_linux_build_and_test.yml
+++ b/.github/workflows/sycl_linux_build_and_test.yml
@@ -142,17 +142,27 @@ jobs:
       run: |
         cmake --build $GITHUB_WORKSPACE/build --target check-xptifw
     - name: Install
-      if: ${{ steps.parameters.build_upload_artifact }}
-      run: cmake --build $GITHUB_WORKSPACE/build --target install
+      # if: ${{ steps.parameters.build_upload_artifact }}
+      # TODO replace utility installation with a single CMake target
+      run: |
+        cmake --build $GITHUB_WORKSPACE/build --target deploy-sycl-toolchain
+        cmake --build $GITHUB_WORKSPACE/build --target utils/FileCheck/install
+        cmake --build $GITHUB_WORKSPACE/build --target utils/count/install
+        cmake --build $GITHUB_WORKSPACE/build --target utils/not/install
+        cmake --build $GITHUB_WORKSPACE/build --target utils/lit/install
+        cmake --build $GITHUB_WORKSPACE/build --target utils/llvm-lit/install
+        cmake --build $GITHUB_WORKSPACE/build --target install-clang-format
+        cmake --build $GITHUB_WORKSPACE/build --target install-clang-tidy
+
     - name: Pack
-      if: ${{ steps.parameters.build_upload_artifact }}
-      run: tar -czf llvm_sycl.tar.gz -C $GITHUB_WORKSPACE/build/install .
+      # if: ${{ steps.parameters.build_upload_artifact }}
+      run: tar -cJf llvm_sycl.tar.xz -C $GITHUB_WORKSPACE/build/install .
     - name: Upload artifacts
       uses: actions/upload-artifact@v1
-      if: ${{ steps.parameters.build_upload_artifact }}
+      # if: ${{ steps.parameters.build_upload_artifact }}
       with:
         name: sycl_linux_${{ fromJSON(needs.configure.outputs.params).build_artifact_suffix }}
-        path: llvm_sycl.tar.gz
+        path: llvm_sycl.tar.xz
     - name: Cleanup
       if: always()
       run: rm -rf $GITHUB_WORKSPACE/*
