--- a/.github/workflows/sycl_nightly.yml
+++ b/.github/workflows/sycl_nightly.yml
@@ -35,7 +35,7 @@ jobs:
         push: true
         build-args: |
           base_image=ghcr.io/intel/llvm/ubuntu2004_intel_drivers
-          base_tag=stable
+          base_tag=latest
         tags: |
           ghcr.io/${{ github.repository }}/sycl_ubuntu2004_nightly:${{ github.sha }}
           ghcr.io/${{ github.repository }}/sycl_ubuntu2004_nightly:latest
