--- a/buildbot/dependency.conf
+++ b/buildbot/dependency.conf
@@ -51,3 +51,5 @@ fpga_root_win={ARCHIVE_ROOT}/comp/oclfpga/win
 ocl_fpga_emu_root_win={DEPS_ROOT}/opencl/runtime/win/oclfpgaemu
 tbb_root_win={DEPS_ROOT}/tbb/win
 ocloc_root_win={DEPS_ROOT}/opencl/ocloc/win
+
+# Change for test
