--- a/xpti/CMakeLists.txt
+++ b/xpti/CMakeLists.txt
@@ -79,10 +79,7 @@ add_subdirectory(src)
 if (LLVM_BINARY_DIR)
   file(GLOB_RECURSE XPTI_HEADERS_LIST CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/include/xpti/*")
   add_custom_target(xpti-headers
-    DEPENDS ${LLVM_BINARY_DIR}/include/xpti)
-
-  add_custom_command(
-    OUTPUT  ${LLVM_BINARY_DIR}/include/xpti
+    BYPRODUCTS ${LLVM_BINARY_DIR}/include/xpti
     DEPENDS ${XPTI_HEADERS_LIST}
     COMMAND ${CMAKE_COMMAND} -E copy_directory
       ${CMAKE_CURRENT_SOURCE_DIR}/include/xpti
