Fix out-of-tree build by installing mlir-tools
LLVMExports.cmake from already installed packages references files
from the mlir-tools package.

Original commit:
https://github.com/KhronosGroup/SPIRV-LLVM-Translator/commit/9de2805

--- a/llvm-spirv/.github/workflows/check-out-of-tree-build.yml
+++ b/llvm-spirv/.github/workflows/check-out-of-tree-build.yml
@@ -52,6 +52,7 @@ jobs:
             llvm-${{ env.LLVM_VERSION }}-dev \
             libomp-${{ env.LLVM_VERSION }}-dev \
             llvm-${{ env.LLVM_VERSION }}-tools \
+            mlir-${{ env.LLVM_VERSION }}-tools \
             spirv-tools
           # Linux systems in GitHub Actions already have older versions of clang
           # pre-installed. Make sure to override these with the relevant version.
