Update for branch rename
Original commit:
https://github.com/KhronosGroup/SPIRV-LLVM-Translator/commit/6db0f31

--- a/llvm-spirv/.github/workflows/check-code-style.yml
+++ b/llvm-spirv/.github/workflows/check-code-style.yml
@@ -11,7 +11,7 @@ name: Check code style
 on:
   pull_request:
     branches:
-      - master
+      - main
       - llvm_release_*
     paths-ignore: # no need to check formatting for:
       - 'docs/**' # documentation
