--- a/llvm-spirv/.github/workflows/check-out-of-tree-build.yml
+++ b/llvm-spirv/.github/workflows/check-out-of-tree-build.yml
@@ -9,7 +9,7 @@ name: Out-of-tree build & tests
 on:
   push:
     branches:
-      - master
+      - main
       - llvm_release_*
     paths-ignore: # no need to check build for:
       - 'docs/**' # documentation
@@ -18,7 +18,7 @@ on:
       - '**/check-in-tree-build.yml' # check-in-tree-build workflow
   pull_request:
     branches:
-      - master
+      - main
       - llvm_release_*
     paths-ignore: # no need to check build for:
       - 'docs/**' # documentation
