--- a/sycl/plugins/opencl/CMakeLists.txt
+++ b/sycl/plugins/opencl/CMakeLists.txt
@@ -19,3 +19,5 @@ add_sycl_plugin(opencl
 )
 
 set_target_properties(pi_opencl PROPERTIES LINKER_LANGUAGE CXX)
+
+target_compile_definitions(pi_opencl PRIVATE PI_OPENCL_AVAILABLE)
