Migrate SPIRVWriter to new PassManager
Original commit:
https://github.com/KhronosGroup/SPIRV-LLVM-Translator/commit/eb8e9ad

--- a/llvm-spirv/CMakeLists.txt
+++ b/llvm-spirv/CMakeLists.txt
@@ -81,6 +81,7 @@ if(LLVM_SPIRV_BUILD_EXTERNAL)
       BitWriter
       CodeGen
       Core
+      Passes
       Support
       TransformUtils
       ${LLVM_TEST_COMPONENTS}
