--- a/.github/workflows/sycl_linux_build_and_test.yml
+++ b/.github/workflows/sycl_linux_build_and_test.yml
@@ -264,10 +264,13 @@ jobs:
         mkdir toolchain
         tar -xf llvm_sycl.tar.xz -C toolchain
         rm -f llvm_sycl.tar.xz
-    - uses: ./actions/cached_checkout
+    - uses: actions/checkout@v3
       with:
         path: llvm
-        cache_path: "/__w/repo_cache/"
+    - name: GIT HISTORY
+      run: |
+        cd llvm
+        git log -3
     - uses: actions/checkout@v2
       with:
         repository: 'KhronosGroup/SYCL-CTS'
