--- a/.github/workflows/sycl_nightly.yml
+++ b/.github/workflows/sycl_nightly.yml
@@ -19,6 +19,16 @@ jobs:
       build_configure_extra_args: ''
       lts_config: "ocl_gen9;ocl_x64"
 
+  ubuntu2004_opaque_pointers_build_test:
+    if: github.repository == 'intel/llvm'
+    uses: ./.github/workflows/sycl_linux_build_and_test.yml
+    with:
+      build_cache_root: "/__w/"
+      build_cache_suffix: opaque_pointers
+      build_artifact_suffix: opaque_pointers
+      build_configure_extra_args: "--hip --cuda --enable-esimd-emulator --cmake-opt=-DLLVM_ENABLE_OPAQUE_POINTERS=TRUE"
+      lts_config: "ocl_gen9;ocl_x64"
+
   windows_default:
     name: Windows
     if: github.repository == 'intel/llvm'
