--- a/llvm-spirv/lib/SPIRV/CMakeLists.txt
+++ b/llvm-spirv/lib/SPIRV/CMakeLists.txt
@@ -1,54 +1,107 @@
-add_llvm_library(LLVMSPIRVLib
-  LLVMSPIRVOpts.cpp
-  LLVMToSPIRVDbgTran.cpp
-  Mangler/FunctionDescriptor.cpp
-  Mangler/Mangler.cpp
-  Mangler/ManglingUtils.cpp
-  Mangler/ParameterType.cpp
-  OCLToSPIRV.cpp
-  OCLTypeToSPIRV.cpp
-  OCLUtil.cpp
-  VectorComputeUtil.cpp
-  SPIRVLowerBitCastToNonStandardType.cpp
-  SPIRVLowerBool.cpp
-  SPIRVLowerConstExpr.cpp
-  SPIRVLowerMemmove.cpp
-  SPIRVLowerOCLBlocks.cpp
-  SPIRVLowerSaddWithOverflow.cpp
-  SPIRVLowerSPIRBlocks.cpp
-  SPIRVReader.cpp
-  SPIRVRegularizeLLVM.cpp
-  SPIRVToLLVMDbgTran.cpp
-  SPIRVToOCL.cpp
-  SPIRVToOCL12.cpp
-  SPIRVToOCL20.cpp
-  SPIRVUtil.cpp
-  SPIRVWriter.cpp
-  SPIRVWriterPass.cpp
-  PreprocessMetadata.cpp
-  libSPIRV/SPIRVBasicBlock.cpp
-  libSPIRV/SPIRVDebug.cpp
-  libSPIRV/SPIRVDecorate.cpp
-  libSPIRV/SPIRVEntry.cpp
-  libSPIRV/SPIRVFunction.cpp
-  libSPIRV/SPIRVInstruction.cpp
-  libSPIRV/SPIRVModule.cpp
-  libSPIRV/SPIRVStream.cpp
-  libSPIRV/SPIRVType.cpp
-  libSPIRV/SPIRVValue.cpp
-  LINK_COMPONENTS
-    Analysis
-    BitWriter
-    CodeGen
-    Core
-    Demangle
-    IRReader
-    Linker
-    Support
-    TransformUtils
+if(LLVM_LINK_LLVM_DYLIB)
+  add_llvm_library(LLVMSPIRVLib STATIC DISABLE_LLVM_LINK_LLVM_DYLIB
+    LLVMSPIRVOpts.cpp
+    LLVMToSPIRVDbgTran.cpp
+    Mangler/FunctionDescriptor.cpp
+    Mangler/Mangler.cpp
+    Mangler/ManglingUtils.cpp
+    Mangler/ParameterType.cpp
+    OCLToSPIRV.cpp
+    OCLTypeToSPIRV.cpp
+    OCLUtil.cpp
+    VectorComputeUtil.cpp
+    SPIRVLowerBitCastToNonStandardType.cpp
+    SPIRVLowerBool.cpp
+    SPIRVLowerConstExpr.cpp
+    SPIRVLowerMemmove.cpp
+    SPIRVLowerOCLBlocks.cpp
+    SPIRVLowerSaddWithOverflow.cpp
+    SPIRVLowerSPIRBlocks.cpp
+    SPIRVReader.cpp
+    SPIRVRegularizeLLVM.cpp
+    SPIRVToLLVMDbgTran.cpp
+    SPIRVToOCL.cpp
+    SPIRVToOCL12.cpp
+    SPIRVToOCL20.cpp
+    SPIRVUtil.cpp
+    SPIRVWriter.cpp
+    SPIRVWriterPass.cpp
+    PreprocessMetadata.cpp
+    libSPIRV/SPIRVBasicBlock.cpp
+    libSPIRV/SPIRVDebug.cpp
+    libSPIRV/SPIRVDecorate.cpp
+    libSPIRV/SPIRVEntry.cpp
+    libSPIRV/SPIRVFunction.cpp
+    libSPIRV/SPIRVInstruction.cpp
+    libSPIRV/SPIRVModule.cpp
+    libSPIRV/SPIRVStream.cpp
+    libSPIRV/SPIRVType.cpp
+    libSPIRV/SPIRVValue.cpp
+    DEPENDS
+      intrinsics_gen
+	  LLVMAnalysis
+      LLVMBitWriter
+      LLVMCodeGen
+      LLVMCore
+      LLVMDemangle
+      LLVMIRReader
+      LLVMLinker
+      LLVMSupport
+      LLVMTransformUtils
+  )
+else()
+  add_llvm_library(LLVMSPIRVLib
+    LLVMSPIRVOpts.cpp
+    LLVMToSPIRVDbgTran.cpp
+    Mangler/FunctionDescriptor.cpp
+    Mangler/Mangler.cpp
+    Mangler/ManglingUtils.cpp
+    Mangler/ParameterType.cpp
+    OCLToSPIRV.cpp
+    OCLTypeToSPIRV.cpp
+    OCLUtil.cpp
+    VectorComputeUtil.cpp
+    SPIRVLowerBitCastToNonStandardType.cpp
+    SPIRVLowerBool.cpp
+    SPIRVLowerConstExpr.cpp
+    SPIRVLowerMemmove.cpp
+    SPIRVLowerOCLBlocks.cpp
+    SPIRVLowerSaddWithOverflow.cpp
+    SPIRVLowerSPIRBlocks.cpp
+    SPIRVReader.cpp
+    SPIRVRegularizeLLVM.cpp
+    SPIRVToLLVMDbgTran.cpp
+    SPIRVToOCL.cpp
+    SPIRVToOCL12.cpp
+    SPIRVToOCL20.cpp
+    SPIRVUtil.cpp
+    SPIRVWriter.cpp
+    SPIRVWriterPass.cpp
+    PreprocessMetadata.cpp
+    libSPIRV/SPIRVBasicBlock.cpp
+    libSPIRV/SPIRVDebug.cpp
+    libSPIRV/SPIRVDecorate.cpp
+    libSPIRV/SPIRVEntry.cpp
+    libSPIRV/SPIRVFunction.cpp
+    libSPIRV/SPIRVInstruction.cpp
+    libSPIRV/SPIRVModule.cpp
+    libSPIRV/SPIRVStream.cpp
+    libSPIRV/SPIRVType.cpp
+    libSPIRV/SPIRVValue.cpp
+    LINK_COMPONENTS
+      Analysis
+      BitWriter
+      CodeGen
+      Core
+      Demangle
+      IRReader
+      Linker
+      Support
+      TransformUtils
   DEPENDS
     intrinsics_gen
-)
+  )
+endif()
 
 target_include_directories(LLVMSPIRVLib
   PRIVATE
