--- a/llvm/lib/SYCLLowerIR/CMakeLists.txt
+++ b/llvm/lib/SYCLLowerIR/CMakeLists.txt
@@ -12,11 +12,11 @@ endif()
 # NOTE: could have been added earlier from llvm/projects
 if (NOT TARGET LLVMGenXIntrinsics)
   if (NOT DEFINED LLVMGenXIntrinsics_SOURCE_DIR)
-    set(LLVMGenXIntrinsics_GIT_REPO https://github.com/intel/vc-intrinsics.git)
+    set(LLVMGenXIntrinsics_GIT_REPO https://github.com/fineg74/vc-intrinsics.git)
     # Author: Victor Mustya <victor.mustya@intel.com>
     # Date:   Tue, 3 May 2022 17:56:40 +0000
     # Remove default switch labels for LSC-related functions
-    set(LLVMGenXIntrinsics_GIT_TAG 561f4ff575a198b36a72fcb790e1997d7d6d6c91)
+    set(LLVMGenXIntrinsics_GIT_TAG a9a89bcfa85c4ea2671c473e24daf10d321ee4b1)
 
     message(STATUS "vc-intrinsics repo is missing. Will try to download it from ${LLVMGenXIntrinsics_GIT_REPO}")
     include(FetchContent)
