--- a/.github/workflows/sycl_precommit.yml
+++ b/.github/workflows/sycl_precommit.yml
@@ -48,4 +48,4 @@ jobs:
       build_cache_size: "8G"
       build_artifact_suffix: "default"
       build_cache_suffix: "default"
-      lts: ${{ needs.resolve_matrix.outputs.lts }}
+      lts_matrix: ${{ needs.resolve_matrix.outputs.lts_matrix }}
