--- a/unified-runtime/source/adapters/native_cpu/CMakeLists.txt
+++ b/unified-runtime/source/adapters/native_cpu/CMakeLists.txt
@@ -91,6 +91,7 @@ target_link_libraries(${TARGET_NAME} PRIVATE
 )
 
 target_include_directories(${TARGET_NAME} PRIVATE
+        "${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES}"
         "${CMAKE_CURRENT_SOURCE_DIR}/../../"
 )
 
