--- a/llvm-spirv/.github/workflows/check-code-style.yml
+++ b/llvm-spirv/.github/workflows/check-code-style.yml
@@ -54,7 +54,7 @@ jobs:
           # perform or skip further steps, i.e. there is no sense to install
           # clang-format if PR hasn't changed .cpp files at all
           # See [workflow-commands] for reference
-          echo '::set-output name=HAS_CHANGES::true'
+          echo 'HAS_CHANGES=true' >> "$GITHUB_OUTPUT"
         fi
 
     - name: Install dependencies
