--- a/llvm/lib/SYCLNativeCPUUtils/CMakeLists.txt
+++ b/llvm/lib/SYCLNativeCPUUtils/CMakeLists.txt
@@ -35,15 +35,15 @@ endif()
 if(NATIVECPU_USE_OCK)
   if(NATIVECPU_OCK_USE_FETCHCONTENT)
     set(OCK_GIT_INTERNAL_REPO "https://github.com/uxlfoundation/oneapi-construction-kit.git")
-    # commit 846a5c6118826171fb1c93702dd12b004053165c
-    # Merge: 81355afb 11967b11
-    # Author: Harald van Dijk <harald.vandijk@codeplay.com>
-    # Date:   Fri Jan 24 15:41:13 2025 +0000
+    # commit 652f9943b0bfcf61123a0f82b2bdd499738c5391
+    # Merge: c24c971bcb e0f02ae739
+    # Author: Colin Davidson <colin.davidson@codeplay.com>
+    # Date:   Fri Feb 28 15:59:50 2025 +0000
     # 
-    #     Merge pull request #659 from hvdijk/vec-size-1
+    #     Merge pull request #677 from coldav/colin/build_installed_llvm
     #     
-    #     [vecz] Handle vectors of size 1.
-    set(OCK_GIT_INTERNAL_TAG 846a5c6118826171fb1c93702dd12b004053165c)
+    #     Change llvm over to a choice of install or cache, default PRs to install
+    set(OCK_GIT_INTERNAL_TAG 652f9943b0bfcf61123a0f82b2bdd499738c5391)
 
     # Overwrite OCK_GIT_INTERNAL_REPO/OCK_GIT_INTERNAL_TAG if the corresponding options are set
     if(OCK_GIT_REPO)
