[CI] Add Windows BMG testing
Signed-off-by: Sarnie, Nick <nick.sarnie@intel.com>

--- a/.github/workflows/sycl-windows-precommit.yml
+++ b/.github/workflows/sycl-windows-precommit.yml
@@ -50,8 +50,16 @@ jobs:
       always()
       && !cancelled()
       && needs.build.outputs.build_conclusion == 'success'
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - name: Intel GEN12 Graphics with Level Zero
+            runner: '["Windows","gen12"]'
+          - name: Intel Battlemage Graphics with Level Zero
+            runner: '["Windows","bmg"]'
     uses: ./.github/workflows/sycl-windows-run-tests.yml
     with:
-      name: Intel GEN12 Graphics with Level Zero
-      runner: '["Windows","gen12"]'
+      name: ${{ matrix.name }}
+      runner: ${{ matrix.runner }}
       sycl_toolchain_archive: ${{ needs.build.outputs.artifact_archive_name }}
