--- a/sycl/test-e2e/Matrix/lit.local.cfg
+++ b/sycl/test-e2e/Matrix/lit.local.cfg
@@ -3,6 +3,10 @@
 # drivers version, so we temporarily mark it as unsupported (CMPLRLLVM-64705).
 config.unsupported_features += ['spirv-backend']
 
+# https://github.com/intel/llvm/issues/17165
+if 'windows' in config.available_features:
+   config.unsupported_features += ['arch-intel_gpu_bmg_g21']
+
 config.substitutions.append(("%helper-includes", "-I {}/Inputs".format(os.path.dirname(os.path.abspath(__file__)))))
 original_clangxx=""
 for substitution in config.substitutions:
