--- a/.github/workflows/sycl-linux-run-tests.yml
+++ b/.github/workflows/sycl-linux-run-tests.yml
@@ -298,7 +298,7 @@ jobs:
       if: inputs.tests_selector == 'e2e'
       uses: ./devops/actions/run-tests/e2e
       with:
-        ref: ${{ inputs.ref || github.sha }}
+        ref: ${{ inputs.tests_ref || inputs.ref || github.sha }}
         binaries_artifact: ${{ inputs.e2e_binaries_artifact }}
         testing_mode: ${{ inputs.e2e_testing_mode }}
         extra_cmake_args: ${{ inputs.extra_cmake_args }}
