--- a/.github/workflows/ur-benchmarks-reusable.yml
+++ b/.github/workflows/ur-benchmarks-reusable.yml
@@ -82,7 +82,7 @@ jobs:
 
     - name: Install pip packages
       run: |
-        pip install --force-reinstall -r ${{github.workspace}}/sycl-repo/unified-runtime/scripts/benchmarks/requirements.txt
+        pip install --force-reinstall -r ${{github.workspace}}/sycl-repo/devops/scripts/benchmarks/requirements.txt
 
     - name: Configure SYCL
       run: >
@@ -139,7 +139,7 @@ jobs:
       working-directory: ${{ github.workspace }}
       id: benchmarks
       run: >
-        taskset -c "${{ env.CORES }}" ${{ github.workspace }}/sycl-repo/unified-runtime/scripts/benchmarks/main.py
+        taskset -c "${{ env.CORES }}" ${{ github.workspace }}/sycl-repo/devops/scripts/benchmarks/main.py
         ~/llvm_bench_workdir
         --sycl ${{ github.workspace }}/sycl_build
         --ur ${{ github.workspace }}/ur_install
@@ -195,4 +195,4 @@ jobs:
 
     - name: Get information about platform
       if: ${{ always() }}
-      run: ${{github.workspace}}/sycl-repo/unified-runtime/.github/scripts/get_system_info.sh
+      run: ${{github.workspace}}/sycl-repo/devops/scripts/get_system_info.sh
